# codeTrainer

./: CMakeLists.txt  README.md  main.cpp
lookupTables/: braille.cpp  general.cpp  morse.cpp  nato.cpp  semaphore.cpp  tables.h
